# bluetooth-heart-rate-plugin

./: CMakeLists.txt  README.md  heart-rate-reader.cpp  heart-rate-reader.h  plugin-main.cpp
data/locale/: en-US.ini
